# bedrock-rag-patterns

./: .gitignore  README.md  pyproject.toml
docs/: patterns.md
examples/: basic_rag.py  hybrid_search.py
src/bedrock_rag/: __init__.py  client.py  guardrails.py  hallucination.py  pipeline.py  reranker.py  retrieval.py
