[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock-rag-patterns"
version = "0.1.0"
description = "Production-ready RAG patterns on AWS Bedrock: hybrid search, re-ranking, hallucination detection, and guardrails."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ivan Diranzo", email = "ivan@ivandir.com" },
]
keywords = ["aws", "bedrock", "rag", "llm", "opensearch", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boto3>=1.34.0",
    "anthropic>=0.25.0",
    "botocore>=1.34.0",
]

[project.optional-dependencies]
opensearch = [
    "opensearch-py>=2.4.0",
    "requests-aws4auth>=1.2.3",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "moto[bedrock]>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "boto3-stubs[bedrock-runtime,bedrock-agent-runtime]>=1.34.0",
]

[project.urls]
Homepage = "https://github.com/ivandiranzo/bedrock-rag-patterns"
Repository = "https://github.com/ivandiranzo/bedrock-rag-patterns"
Issues = "https://github.com/ivandiranzo/bedrock-rag-patterns/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bedrock_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/bedrock_rag --cov-report=term-missing"
